<resources>
    <string name="app_name">new</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leader_name">Leader name</string>
    <string name="country">Country</string>
    <string name="_300">300</string>

    <string name="project_submission">Project Submission</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="are_you_sure">Are you sure</string>
</resources>