<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context=".MainActivity">

   <LinearLayout
       android:id="@+id/main_toolbar"
       android:layout_width="match_parent"
       android:layout_height="56dp"
       android:layout_marginTop="20dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:id="@+id/submix_txt_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_marginStart="15dp"
               android:text="@string/leaderboard"
               android:textAllCaps="true"
               android:layout_centerVertical="true"
               android:textColor="#FFF"
               android:textSize="17sp"
               android:textStyle="bold"/>

           <TextView
               android:id="@+id/button_submit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/submit"
               android:textColor="#000"
               android:layout_alignParentEnd="true"
               android:layout_centerVertical="true"
               android:layout_marginEnd="30dp"
               android:background="@drawable/submit_bg"
               android:paddingHorizontal="35dp"/>


       </RelativeLayout>

   </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:tabIndicatorHeight="7dp"
        app:tabSelectedTextColor="#fff"
        app:tabIndicatorColor="#fff"
        app:tabTextColor="@android:color/darker_gray"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning_leaders"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_iq_leaders"/>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>